Add basic styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
   <title>Calculator</title>
 </head>
 <body>
+  <div class="container">
+    <div class="calc-body">
+      <div class="display">012345678901234</div>
+      <div class="button-block">
+        <div class="digits-block">
+          <button class="digit-1">1</button>
+          <button class="digit-2">2</button>
+          <button class="digit-3">3</button>
+          <button class="digit-4">4</button>
+          <button class="digit-5">5</button>
+          <button class="digit-6">6</button>
+          <button class="digit-7">7</button>
+          <button class="digit-8">8</button>
+          <button class="digit-9">9</button>
+          <button class="digit-0">0</button>
+        </div>
+        <div class="operators-block">
+          <button class="add">+</button>
+          <button class="substruct">-</button>
+          <button class="multiply">*</button>
+          <button class="divide">/</button>
+          <button class="clear">C</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="app.js"></script>
 </body>
 </html>
