Add evaluation functions. Alfa's ready

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           <button class="digit digit-0">0</button>
         </div>
         <div class="operators-block">
-          <button class="add">+</button>
-          <button class="substruct">-</button>
-          <button class="multiply">*</button>
-          <button class="divide">/</button>
-          <button class="equals">=</button>
-          <button class="clear">C</button>
+          <button class="operator add">+</button>
+          <button class="operator substruct">-</button>
+          <button class="operator multiply">*</button>
+          <button class="operator divide">/</button>
+          <button id="equals">=</button>
+          <button id="clear">C</button>
         </div>
       </div>
     </div>
