Add status text, +restyle a bit

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         </div>
       </div>
     </div>
+    <div id="status-div">
+      <p id="status"></p>
+    </div>
   </div>
 
   <script src="app.js"></script>
