Add . operator. Add digit limit

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <button class="digit digit-8">8</button>
           <button class="digit digit-9">9</button>
           <button class="digit digit-0">0</button>
+          <button class="digit" id="dot">.</button>
         </div>
         <div class="operators-block">
           <button class="operator add">+</button>
