--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <button class="operator divide">/</button>
           <button id="equals">=</button>
           <button id="clear">C</button>
+          <button id="bckspace">&#8678;</button>
         </div>
       </div>
     </div>
