Add keyboard support

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div id="display"></div>
       <div class="button-block">
         <div class="digits-block">
-          <button id="gh" class="digit digit-1">1</button>
+          <button class="digit digit-1">1</button>
           <button class="digit digit-2">2</button>
           <button class="digit digit-3">3</button>
           <button class="digit digit-4">4</button>
