--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <div id="display"></div>
       <div class="button-block">
         <div class="digits-block">
-          <button class="digit digit-1">1</button>
-          <button class="digit digit-2">2</button>
-          <button class="digit digit-3">3</button>
-          <button class="digit digit-4">4</button>
-          <button class="digit digit-5">5</button>
-          <button class="digit digit-6">6</button>
-          <button class="digit digit-7">7</button>
-          <button class="digit digit-8">8</button>
-          <button class="digit digit-9">9</button>
-          <button class="digit digit-0">0</button>
+          <button class="digit">1</button>
+          <button class="digit">2</button>
+          <button class="digit">3</button>
+          <button class="digit">4</button>
+          <button class="digit">5</button>
+          <button class="digit">6</button>
+          <button class="digit">7</button>
+          <button class="digit">8</button>
+          <button class="digit">9</button>
+          <button class="digit">0</button>
           <button class="digit" id="dot">.</button>
         </div>
         <div class="operators-block">
